本地自我保护机制关闭

--- a/springcloud-2.0-eureke-server/src/main/resources/application.yml
+++ b/springcloud-2.0-eureke-server/src/main/resources/application.yml
@@ -16,3 +16,9 @@ eureka:
     register-with-eureka: true
 #    因为自己是注册中心，不需要检索
     fetch-registry: true
+
+    server:
+      # 测试时关闭自我保护机制，保证不可用服务及时踢出
+      enable-self-preservation: false
+      ##剔除失效服务间隔
+      eviction-interval-timer-in-ms: 2000
