--- a/springcloud-2.0-eureke-server/pom.xml
+++ b/springcloud-2.0-eureke-server/pom.xml
@@ -31,6 +31,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <version>2.0.1.RELEASE</version>
         </dependency>
     </dependencies>
     <!-- 注意： 这里必须要添加， 否者各种依赖有问题 -->
