--- a/springcloud-2.0-order/pom.xml
+++ b/springcloud-2.0-order/pom.xml
@@ -35,6 +35,14 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>2.0.1.RELEASE</version>
+        </dependency>
+
+        <!-- SpringCloud整合feign客户端 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>2.0.1.RELEASE</version>
         </dependency>
 
     </dependencies>
