--- a/springcloud2.0-itmayiedu-parent/pom.xml
+++ b/springcloud2.0-itmayiedu-parent/pom.xml
@@ -5,9 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.itmayiedu</groupId>
-    <artifactId>springcloud-2.0-eureka9100</artifactId>
+    <artifactId>springcloud2.0-itmayiedu-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <modules>
+        <module>springcloud2.0-itmayiedu-api-service</module>
+        <module>springcloud2.0-itmayiedu-api-order-service-impl</module>
+        <module>springcloud2.0-itmayiedu-api-order-service-impl</module>
+        <module>springcloud2.0-itmayiedu-api-member-service-impl</module>
+    </modules>
+    <packaging>pom</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -15,7 +21,7 @@
         <version>2.0.1.RELEASE</version>
     </parent>
     <!-- 管理依赖 -->
-    <dependencyManagement>
+   <!-- <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
@@ -25,14 +31,30 @@
                 <scope>import</scope>
             </dependency>
         </dependencies>
-    </dependencyManagement>
+    </dependencyManagement>-->
     <dependencies>
-        <!--SpringCloud eureka-server -->
+        <!-- SpringBoot整合Web组件 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <!-- SpringBoot整合eureka客户端 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
             <version>2.0.1.RELEASE</version>
         </dependency>
+        <!-- SpringBoot整合fegnin客户端 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>2.0.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
     </dependencies>
     <!-- 注意： 这里必须要添加， 否者各种依赖有问题 -->
     <repositories>
@@ -45,5 +67,4 @@
             </snapshots>
         </repository>
     </repositories>
-    
 </project>
