--- a/springcloud2.0-itmayiedu-parent/springcloud2.0-itmayiedu-api-order-service-impl/src/main/resources/application.yml
+++ b/springcloud2.0-itmayiedu-parent/springcloud2.0-itmayiedu-api-order-service-impl/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 #服务启动端口号
 server:
-  port: 8012
+  port: 8020
 ###服务名称(服务注册到eureka名称)
 spring:
     application:
-        name: app-itmayiedu-member
+        name: app-itmayiedu-order
 ###服务注册到eureka地址
 eureka:
   client:
