--- a/springcloud2.0-itmayiedu-parent/pom.xml
+++ b/springcloud2.0-itmayiedu-parent/pom.xml
@@ -12,6 +12,8 @@
         <module>springcloud2.0-itmayiedu-api-order-service-impl</module>
         <module>springcloud2.0-itmayiedu-api-order-service-impl</module>
         <module>springcloud2.0-itmayiedu-api-member-service-impl</module>
+        <module>springcloud2.0-itmayiedu-api-order-service-impl</module>
+        <module>springcloud2.0-itmayiedu-common</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -21,17 +23,17 @@
         <version>2.0.1.RELEASE</version>
     </parent>
     <!-- 管理依赖 -->
-   <!-- <dependencyManagement>
+    <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Finchley.M7</version>
+                <version>Finchley.SR1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
         </dependencies>
-    </dependencyManagement>-->
+    </dependencyManagement>
     <dependencies>
         <!-- SpringBoot整合Web组件 -->
         <dependency>
@@ -49,6 +51,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
             <version>2.0.1.RELEASE</version>
+        </dependency>
+        <!-- hystrix断路器 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
