--- a/springcloud2.0-itmayiedu-parent/springcloud2.0-itmayiedu-api-order-service-impl/pom.xml
+++ b/springcloud2.0-itmayiedu-parent/springcloud2.0-itmayiedu-api-order-service-impl/pom.xml
@@ -11,6 +11,18 @@
     <packaging>jar</packaging>
 
     <artifactId>springcloud2.0-itmayiedu-api-order-service-impl</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.itmayiedu</groupId>
+            <artifactId>springcloud2.0-itmayiedu-api-order-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.itmayiedu</groupId>
+            <artifactId>springcloud2.0-itmayiedu-api-member-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
