--- a/springcloud2.0-itmayiedu-parent/springcloud2.0-itmayiedu-api-member-service-impl/pom.xml
+++ b/springcloud2.0-itmayiedu-parent/springcloud2.0-itmayiedu-api-member-service-impl/pom.xml
@@ -22,6 +22,38 @@
             <version>1.7.0.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.21</version>
+        </dependency>
+
+
+        <!--mybatis操作数据库有关-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <!--使用阿里巴巴的druid数据源，有利于监控sql的执行情况-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.10</version>
+        </dependency>
+        <!--通用mapper-->
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>2.1.2</version>
+        </dependency>
+        <!--使用fastjson来操作json数据-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.31</version>
+        </dependency>
+
     </dependencies>
 
 
